// Copyright 2018 Google Cloud Platform Proxy Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.api.envoy.http.service_control;

import "validate/validate.proto";

// APIKey defines the explicit configuration for generating the
// `request.api_key` attribute from HTTP requests.
//
// See https://swagger.io/docs/specification/authentication/api-keys
// for a general overview of API keys as defined by OpenAPI.
message APIKey {
  oneof key {
    // API Key is sent as a query parameter. `query` represents the
    // query string parameter name.
    //
    // For example, `query=api_key` should be used with the
    // following request:
    //
    //     GET /something?api_key=abcdef12345
    //
    string query = 1;

    // API key is sent in a request header. `header` represents the
    // header name.
    //
    // For example, `header=X-API-KEY` should be used with the
    // following request:
    //
    //     GET /something HTTP/1.1
    //     X-API-Key: abcdef12345
    //
    string header = 2;

    // API key is sent in a
    // [cookie](https://swagger.io/docs/specification/authentication/cookie-authentication),
    //
    // For example, `cookie=X-API-KEY` should be used for the
    // following request:
    //
    //     GET /something HTTP/1.1
    //     Cookie: X-API-KEY=abcdef12345
    //
    string cookie = 3;
  }
}

message APIKeyRequirement {
  // Finds API key from the first location specified.
  repeated APIKey api_keys = 1;

  // whether to allow request without api key.
  bool allow_without_api_key = 2;
}

message Requirement {
  // Refers to the service name in FilterConfig.services.service_name.
  string service_name = 1 [(validate.rules).string.min_bytes = 1];

  // The operation name.
  string operation_name = 2 [(validate.rules).string.min_bytes = 1];

  // API key related requirements.
  APIKeyRequirement api_key = 3;

  // Custom labels.
  repeated string custom_labels = 4;

  // API name. Used for Chemist report request.
  string api_name = 5;

  // API version. Used for Chemist report request.
  string api_version = 6;

  // TODO(tianyuc): define more requirments, e.g. metrics, quota and more.
}